@@ -28,48 +28,6 @@
 // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
-
-namespace Mono.Cecil.Cil {
-
-	using System.Collections;
-
-	public sealed class OpCodes {
-
-		OpCodes()
-		{
-		}
-
-<% $ops.each { |op| %>		public static readonly OpCode <%=op.field_name%> = new OpCode (
-			"<%=op.name%>", <%=op.op1%>, <%=op.op2%>, <%=op.size%>, <%=op.flowcontrol%>,
-			<%=op.opcodetype%>, <%=op.operandtype%>,
-			<%=op.stackbehaviourpop%>, <%=op.stackbehaviourpush%>);
-<% } %>		public sealed class Cache {
-
-			public static readonly Cache Instance = new Cache ();
-
-			IDictionary m_cache;
-			OpCode [] m_oneByteOpCode;
-			OpCode [] m_twoBytesOpCodes;
-
-			public OpCode this [string name] {
-				get { return (OpCode) m_cache [name]; }
-			}
-
-			internal IDictionary Dictionary {
-				get { return m_cache; }
-			}
-
-			internal OpCode [] OneByteOpCode {
-				get { return m_oneByteOpCode; }
-			}
-
-			internal OpCode [] TwoBytesOpCode {
-				get { return m_twoBytesOpCodes; }
-			}
-
-			Cache ()
-			{
-				m_cache = new Hashtable ();
 <%
 	oboc = Array.new
 	tboc = Array.new
@@ -80,14 +38,21 @@ namespace Mono.Cecil.Cil {
 			tboc.push(op)
 		end
 	}
-%>				m_oneByteOpCode = new OpCode [<%=oboc[oboc.length - 1].op2%> + 1];
-				m_twoBytesOpCodes = new OpCode [<%=tboc[tboc.length - 1].op2%> + 1];
-<% oboc.each { |op| %>				m_oneByteOpCode [<%=op.op2%>] = OpCodes.<%=op.field_name%>;
-<% }
-   tboc.each { |op| %>				m_twoBytesOpCodes [<%=op.op2%>] = OpCodes.<%=op.field_name%>;
-<% } %>
-<% $ops.each { |op| %>				m_cache ["<%=op.name%>"] = OpCodes.<%=op.field_name%>;
-<% } %>			}
+%>
+namespace Mono.Cecil.Cil {
+
+	public sealed class OpCodes {
+
+		internal static readonly OpCode [] OneByteOpCode = new OpCode [<%=oboc[oboc.length - 1].op2%> + 1];
+		internal static readonly OpCode [] TwoBytesOpCode = new OpCode [<%=tboc[tboc.length - 1].op2%> + 1];
+
+<% $ops.each { |op| %>		public static readonly OpCode <%=op.field_name%> = new OpCode (
+			"<%=op.name%>", <%=op.op1%>, <%=op.op2%>, <%=op.size%>, <%=op.flowcontrol%>,
+			<%=op.opcodetype%>, <%=op.operandtype%>,
+			<%=op.stackbehaviourpop%>, <%=op.stackbehaviourpush%>);
+
+<% } %>		OpCodes()
+		{
 		}
 	}
 }
